syntax = "proto3";

package crescent.farming.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/crescent-network/crescent/v4/x/farming/types";

// Params defines the set of params for the farming module.
message Params {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  // private_plan_creation_fee specifies the fee for plan creation
  // this fee prevents from spamming and is collected in the community pool
  repeated cosmos.base.v1beta1.Coin private_plan_creation_fee = 1 [
    (gogoproto.moretags)     = "yaml:\"private_plan_creation_fee\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];

  // next_epoch_days is the epoch length in number of days
  // it updates internal state called CurrentEpochDays that is used to process
  // staking and reward distribution in end blocker
  uint32 next_epoch_days = 2 [(gogoproto.moretags) = "yaml:\"next_epoch_days\""];

  // farming_fee_collector is the module account address to collect fees within the farming module
  string farming_fee_collector = 3 [(gogoproto.moretags) = "yaml:\"farming_fee_collector\""];

  // delayed_staking_gas_fee is used to impose gas fee for the delayed staking
  uint64 delayed_staking_gas_fee = 4 [
    (gogoproto.moretags)   = "yaml:\"delayed_staking_gas_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Gas",
    (gogoproto.nullable)   = false
  ];

  // max_num_private_plans is the maximum number of active private plans
  uint32 max_num_private_plans = 5 [(gogoproto.moretags) = "yaml:\"max_num_private_plans\""];
}

// BasePlan defines a base plan type and contains the required fields
// for basic farming plan functionality. Any custom farming plan type must
// extend this type for additional functionality (for example, fixed amount plan, ratio
// plan).
message BasePlan {
  option (gogoproto.goproto_getters) = false;

  option (cosmos_proto.implements_interface) = "PlanI";

  // id specifies index of the farming plan
  uint64 id = 1;

  // name specifies the name for the plan
  string name = 2;

  // type specifies the plan type; type 0 is public and 1 is private
  // public plan must be created through governance proposal and private plan is
  // created by account
  PlanType type = 3;

  // farming_pool_address defines the bech32-encoded address of the farming pool
  string farming_pool_address = 4 [(gogoproto.moretags) = "yaml:\"farming_pool_address\""];

  // termination_address defines the Bech32-encoded address that terminates the plan
  // when the plan ends after the end time, the balance of the farming pool address
  // is transferred to the termination address
  string termination_address = 5 [(gogoproto.moretags) = "yaml:\"termination_address\""];

  // staking_coin_weights specifies the coin weights for the plan
  repeated cosmos.base.v1beta1.DecCoin staking_coin_weights = 6 [
    (gogoproto.moretags)     = "yaml:\"staking_coin_weights\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable)     = false
  ];

  // start_time specifies the start time of the plan
  google.protobuf.Timestamp start_time = 7
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""];

  // end_time specifies the end time of the plan
  google.protobuf.Timestamp end_time = 8
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"end_time\""];

  // terminated indicates whether the plan has been terminated or not
  bool terminated = 9;

  // last_distribution_time specifies the last time a distribution occurred
  google.protobuf.Timestamp last_distribution_time = 10
      [(gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"last_distribution_time\""];

  // distributed_coins specifies the total coins distributed by this plan
  repeated cosmos.base.v1beta1.Coin distributed_coins = 11 [
    (gogoproto.moretags)     = "yaml:\"distributed_coins\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}

// FixedAmountPlan defines a fixed amount plan that distributes a fixed amount
// of coins for every epoch.
message FixedAmountPlan {
  option (gogoproto.goproto_getters) = false;

  BasePlan base_plan = 1 [(gogoproto.embed) = true, (gogoproto.moretags) = "yaml:\"base_plan\""];

  // epoch_amount specifies the distributing amount for each epoch
  repeated cosmos.base.v1beta1.Coin epoch_amount = 2 [
    (gogoproto.moretags)     = "yaml:\"epoch_amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}

// RatioPlan defines a plan that distributes to farmers by ratio
// distribution for every epoch day.
message RatioPlan {
  option (gogoproto.goproto_getters) = false;

  BasePlan base_plan = 1 [(gogoproto.embed) = true, (gogoproto.moretags) = "yaml:\"base_plan\""];

  // epoch_ratio specifies the distributing amount by ratio
  string epoch_ratio = 2 [
    (gogoproto.moretags)   = "yaml:\"epoch_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// PlanType enumerates the valid types of a plan.
enum PlanType {
  option (gogoproto.goproto_enum_prefix) = false;

  // PLAN_TYPE_UNSPECIFIED defines the default plan type.
  PLAN_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "PlanTypeNil"];
  // PLAN_TYPE_PUBLIC defines the public plan type.
  PLAN_TYPE_PUBLIC = 1 [(gogoproto.enumvalue_customname) = "PlanTypePublic"];
  // PLAN_TYPE_PRIVATE defines the private plan type.
  PLAN_TYPE_PRIVATE = 2 [(gogoproto.enumvalue_customname) = "PlanTypePrivate"];
}

// Staking defines a farmer's staking information.
message Staking {
  option (gogoproto.goproto_getters) = false;

  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

  uint64 starting_epoch = 2 [(gogoproto.moretags) = "yaml:\"starting_epoch\""];
}

// QueuedStaking defines staking that is waiting in a queue.
message QueuedStaking {
  option (gogoproto.goproto_getters) = false;

  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

// TotalStakings defines the total staking amount for a staking coin denom.
message TotalStakings {
  option (gogoproto.goproto_getters) = false;

  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

// HistoricalRewards defines the cumulative unit rewards for a given staking coin denom and an epoch number.
message HistoricalRewards {
  option (gogoproto.goproto_getters) = false;

  repeated cosmos.base.v1beta1.DecCoin cumulative_unit_rewards = 1 [
    (gogoproto.moretags)     = "yaml:\"cumulative_unit_rewards\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable)     = false
  ];
}

// OutstandingRewards represents outstanding (un-withdrawn) rewards
// for a staking coin denom.
message OutstandingRewards {
  option (gogoproto.goproto_getters) = false;

  repeated cosmos.base.v1beta1.DecCoin rewards = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins", (gogoproto.nullable) = false];
}

// UnharvestedRewards represents unharvested rewards of a farmer for a
// staking coin denom, which increases when there was an automatic withdrawal
// of rewards due to changes in staked coin amount.
message UnharvestedRewards {
  option (gogoproto.goproto_getters) = false;

  repeated cosmos.base.v1beta1.Coin rewards = 1
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

// AddressType enumerates the available types of a address.
enum AddressType {
  option (gogoproto.goproto_enum_prefix) = false;

  // the 32 bytes length address type of ADR 028.
  ADDRESS_TYPE_32_BYTES = 0 [(gogoproto.enumvalue_customname) = "AddressType32Bytes"];
  // the default 20 bytes length address type.
  ADDRESS_TYPE_20_BYTES = 1 [(gogoproto.enumvalue_customname) = "AddressType20Bytes"];
}
